uses placeholder to fix alignment issues when two items in last row

--- a/explorer/client/src/components/ownedobjects/OwnedObjects.module.css
+++ b/explorer/client/src/components/ownedobjects/OwnedObjects.module.css
@@ -12,6 +12,10 @@
     @apply border-solid border-stone-300 rounded-lg my-2 p-2 cursor-pointer hover:shadow-md;
 }
 
+.fillerbox {
+    @apply invisible;
+}
+
 .objectbox {
     @apply border-solid border-stone-300 rounded-lg my-2 lg:self-center hover:shadow-md cursor-pointer break-all lg:w-[20vw];
 }
